--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ Diferenciais de upgrade:
 
 Dados:
 
-Carnes > 500 gramas / 700 gramas (+6h)
-Cerveja > 1200ml/2000ml
-Bebidas quentes 500ml/800ml
+Carnes > 400 gramas / 600 gramas (+6h)
+Cerveja > 2100ml/3500ml  (6 latas / 10 latas)
+Bebidas quentes 500ml/800ml 
 Refrigerante 1000 ml/ 1500ml;
 
 Preferi colocar refrigerantes e Bebidas quentes em litros, pq abrange todos os tipos de bebidas.
