--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Diferenciais de upgrade:
 3- Se a pessoa bebe cerveja ou não;
 
 
-Dados:
+Dados pré-definidos:
 
 Carnes > 400 gramas / 600 gramas (+6h)
 Cerveja > 2800ml/4200ml  (8 latas / 12 latas)
