--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ Diferenciais de upgrade:
 3- Se a pessoa bebe cerveja ou não;
 
 
-Dados pré-definidos:
+>> Dados pré-definidos:
 
 Carnes > 400 gramas / 600 gramas (+6h)
-Cerveja > 2800ml/4200ml  (8 latas / 12 latas)
-Bebidas quentes 500ml/800ml 
+Cerveja > 3500ml/5250ml  (10 latas / 15 latas)
+Bebidas quentes 400ml/600ml 
 Refrigerante 1000 ml/ 1500ml;
 
 Preferi colocar refrigerantes e Bebidas quentes em litros, pq abrange todos os tipos de bebidas.
