--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Diferenciais de upgrade:
 Carnes > 400 gramas / 600 gramas (+6h)
 Cerveja > 3500ml/5250ml  (10 latas / 15 latas)
 Bebidas quentes 400ml/600ml 
-Refrigerante 1000 ml/ 1500ml;
+Refrigerante 1000 ml/ 1500ml;.
 
 Preferi colocar refrigerantes e Bebidas quentes em litros, pq abrange todos os tipos de bebidas.
 -->
