--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     </div>
 
-    <footer><a href="https://www.linkedin.com/in/valber-junior-238217b4/"><img src="./Assets/linekdin.png" type="image/png" alt="logo linekdin" class="lnk"></a></footer>
+    <footer class="rodape"></footer>
 
 <script src="./Script/script.js"></script>  
 </body>
