--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     
     </div>
 
-    <footer class="rodape"></footer>
+    <footer>
+        <ul>
+           <li><a href="https://www.linkedin.com/in/valber-junior-238217b4/"><img src="./Assets/linekdin.png" type="image/png" alt="logo linekdin" class="icone"></a></li>
+           <li><a href="https://github.com/ValberJunior"><img src="./Assets/github.png" type="image/png" alt="logo github" class="icone"></a></li>
+        </ul>
+    </footer>
 
 <script src="./Script/script.js"></script>  
 </body>
