--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ dependendo do número de pessoas, se elas
 são adultas ou crianças e quanto tempo será
 a duração desse churrasco.
 
+Dados sugeridos: 
+
 Carne > 400 gr por pessoa + de 6 horas - 650
 Cerveja > 1200 ml por pessoa + 6 horas - 2000
 Refrigerante/agua 1000 ml por pessoa + 6 horas 1500ml
@@ -70,7 +72,7 @@ Diferenciais de upgrade:
 3- Se a pessoa bebe cerveja ou não;
 
 
-Dados:
+Dados aplicados:
 
 Carnes > 500 gramas / 700 gramas (+6h)
 Cerveja > 28000ml/4200ml  (8 latas / 12 latas)
