--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header><img src="./Assets/banner.png" class="banner"></header>
+    <header class="banner"><img src="./Assets/icone.png" alt="Logo Churrascometro" type="image/png" class="logo"></header>
 
      <div class="container">     
 
